--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
 		<version>2.7.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.javatechie</groupId>
-	<artifactId>devops-integration</artifactId>
+	<groupId>com.mamadoucire</groupId>
+	<artifactId>devops-jenkins</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>devops-integration</name>
+	<name>devops-jenkins</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
@@ -57,7 +57,7 @@
 				<artifactId>git-commit-id-plugin</artifactId>
 			</plugin>
 		</plugins>
-		<finalName>devops-integration</finalName>
+		<finalName>devops-jenkins</finalName>
 	</build>
 
 </project>
